# research-paper-analyser

./: .gitignore  README.md  agents.py  app.py  bug_report.md  case_study.py  crew.py  main.py  pdf_utils.py  pyproject.toml  requirements.txt  research_analyzer_neobrutalist_ui.html  tasks.py  test_error.txt  test_error_v2.txt  test_output.txt  test_paper.txt
